--- a/.github/workflows/proyecto_integrador.yml
+++ b/.github/workflows/proyecto_integrador.yml
@@ -1,4 +1,4 @@
-name: Ingesta de datos
+name: Actividad Ingesta de Datos
 
 on:
   push:
@@ -18,62 +18,23 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-         python-version: '3.9.2'
+          python-version: '3.9.2'
       - name: paso1 - crea entorno virtual
         run: python -m venv venv
       - name: paso2 - activar entorno virtual
-        run: ./venv/Scripts/activate
+        run: ./venv/Scripts/activate   
       - name: paso3 - actualizar pip
         run: pip install --upgrade pip
       - name: paso4 - instalar dependencias
         run: pip install -e .
-      - name: paso5 - Ejercutar script
-        run: python src/bigdata/static/ingesta.py
-
-on:
-  push:
-    branches: [ main ]
-
-jobs:
-  build:
-    runs-on: windows-latest
-    permissions:
-      contents: write
-
-
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-         python-version: '3.9.2'
-      - name: paso1 - crea entorno virtual
-        run: python -m venv venv
-      - name: paso2 - activar entorno virtual
-        run: ./venv/Scripts/activate
-      - name: paso3 - actualizar pip
-        run: pip install --upgrade pip
-      - name: paso4 - instalar dependencias
-        run: pip install -e .
-      - name: paso5 - Ejercutar script
-        run: python src/IBD/ingestion.py
+      - name: paso5 - Ejecutar script
+        run: python /src/IBD/ingestion.py
 
       - name: Commit and Push changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: Generacion informe json
-          commit_user_name: Felipe Sanchez [GitHub Antions]
+          commit_message: generación informe prueba json
+          commit_user_name: Felipe Sánchez [GitHub Actions]
           commit_user_email: leon.sanchez@est.iudigital.edu.co
-          commit_author: Felipe Sanchez <leon.sanchez@est.iudigital.edu.co>
-        
-
-      - name: Commit and Push changes
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: Generacion informe json
-          commit_user_name: Felipe Sanchez [GitHub Antions]
-          commit_user_email: leon.sanchez@est.iudigital.edu.co
-          commit_author: Felipe Sanchez <leon.sanchez@est.iudigital.edu.co>
+          commit_author: Felipe Sánchez <leon.sanchez@est.iudigital.edu.co>
         
