--- a/.github/workflows/proyecto_integrador.yml
+++ b/.github/workflows/proyecto_integrador.yml
@@ -28,12 +28,12 @@ jobs:
       - name: paso4 - instalar dependencias
         run: pip install -e .
       - name: paso5 - Ejecutar script
-        run: python /src/IBD/ingestion.py
+        run: python /workspaces/BIGDATA_FELIPE_SANCHEZ/src/IBD/ingestion.py
 
       - name: Commit and Push changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: generación informe prueba json
+          commit_message: Actividad Número 1
           commit_user_name: Felipe Sánchez [GitHub Actions]
           commit_user_email: leon.sanchez@est.iudigital.edu.co
           commit_author: Felipe Sánchez <leon.sanchez@est.iudigital.edu.co>
