--- a/.github/workflows/proyecto_integrador.yml
+++ b/.github/workflows/proyecto_integrador.yml
@@ -10,31 +10,35 @@ jobs:
     permissions:
       contents: write
 
-
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4  
 
       - name: Setup Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v5 
         with:
-          python-version: '3.9.2'
-      - name: paso1 - crea entorno virtual
-        run: python -m venv venv
-      - name: paso2 - activar entorno virtual
-        run: ./venv/Scripts/activate   
-      - name: paso3 - actualizar pip
-        run: pip install --upgrade pip
-      - name: paso4 - instalar dependencias
-        run: pip install -e .
-      - name: paso5 - Ejecutar script
-        run: python src/bigdata/static/ingestion.py
+          python-version: '3.9.2'  
+
+      - name: Crear entorno virtual
+        run: python -m venv venv  
+
+      - name: Activar entorno virtual
+        run: ./venv/Scripts/activate  
+
+      - name: Actualizar pip
+        run: pip install --upgrade pip  
+
+      - name: Instalar dependencias
+        run: pip install -e . 
+
+      - name: Ejecutar script
+        run: python src/bigdata/static/ingestion.py  
 
       - name: Commit and Push changes
-        uses: stefanzweifel/git-auto-commit-action@v5
+        uses: stefanzweifel/git-auto-commit-action@v5  
         with:
-          commit_message: Actividad Número 1
-          commit_user_name: Felipe Sánchez [GitHub Actions]
-          commit_user_email: leon.sanchez@est.iudigital.edu.co
-          commit_author: Felipe Sánchez <leon.sanchez@est.iudigital.edu.co>
+          commit_message: Actividad Número 1  
+          commit_user_name: Felipe Sánchez [GitHub Actions]  
+          commit_user_email: leon.sanchez@est.iudigital.edu.co  
+          commit_author: Felipe Sánchez <leon.sanchez@est.iudigital.edu.co>  
         
