--- a/.github/workflows/proyecto_integrador.yml
+++ b/.github/workflows/proyecto_integrador.yml
@@ -40,5 +40,5 @@ jobs:
           commit_message: Actividad Número 1  
           commit_user_name: Felipe Sánchez [GitHub Actions]  
           commit_user_email: leon.sanchez@est.iudigital.edu.co  
-          commit_author: Felipe Sánchez <leon.sanchez@est.iudigital.edu.co>  
+          commit_author: Felipe Sánchez P <leon.sanchez@est.iudigital.edu.co>  
         
